feat(SystemBanner): handle mobile layout

--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -19,20 +19,17 @@
 <sgds-system-banner dismissible show>
     <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 1</div>
-        <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncu</div>
+        <div>1Etiam suscipit nisi eget porta cursus. </div>
             <a href="#" slot="action">Action</a>
     </sgds-system-banner-item>
     <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 1</div>
-        <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus </div>
+        <div>2Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus </div>
             <a href="#" slot="action">Action</a>
     </sgds-system-banner-item>
     <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 2</div>
-        <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus </div>
+        <div>3Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus </div>
             <a href="#" slot="action">Action</a>
     </sgds-system-banner-item>
 </sgds-system-banner>
@@ -46,66 +43,3 @@
         anotherContainer.classList.add('no-banner');
     })
 </script>
-<!-- <sgds-system-banner dismissible show variant="neutral">
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 1</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 2</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 3</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-</sgds-system-banner>
-
-<sgds-system-banner dismissible show variant="danger">
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 1</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 2</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 3</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-</sgds-system-banner>
-
-<sgds-system-banner dismissible show variant="warning">
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 1</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 2</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 3</div>
-        <div>message here</div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-</sgds-system-banner>
-  -->
