docs(SystemBanner): wip

--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -17,21 +17,61 @@
     }
 </style>
 <sgds-system-banner dismissible show>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div>1Etiam suscipit nisi eget porta cursus. </div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        2Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus am suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rho am suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rho am suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rho am suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rho am suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rho
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
-    <sgds-system-banner-item>
-        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div>3Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus </div>
-            <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
+  <sgds-system-banner-item>
+    <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
+    <div>
+      Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
+      facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus
+    </div>
+    <sgds-link size="sm" variant="light" slot="action"
+      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+    ></sgds-link>
+  </sgds-system-banner-item>
+  <sgds-system-banner-item>
+    <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
+    <div>
+      Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
+      facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus
+    </div>
+    <sgds-link size="sm" variant="light" slot="action"
+      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+    ></sgds-link>
+  </sgds-system-banner-item>
+  <sgds-system-banner-item>
+    <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
+    <div>
+      Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
+      facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus
+    </div>
+    <sgds-link size="sm" variant="light" slot="action"
+      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+    ></sgds-link>
+  </sgds-system-banner-item>
+  <sgds-system-banner-item>
+    <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
+    <div>
+      Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
+      facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus
+    </div>
+    <sgds-link size="sm" variant="light" slot="action"
+      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+    ></sgds-link>
+  </sgds-system-banner-item>
+  <sgds-system-banner-item>
+    <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
+    <div>
+      Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
+      facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus
+    </div>
+    <sgds-link size="sm" variant="light" slot="action"
+      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+    ></sgds-link>
+  </sgds-system-banner-item>
 </sgds-system-banner>
 
 <div class="another-container">another container</div>
