feat(SystemBannerItem): give action div a height to ensure bottom half in mobile layout stays

--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -25,7 +25,7 @@
       congue sapien eu, rhoncus
     </div>
     <sgds-link size="sm" variant="light" slot="action"
-      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+      ><a href="#">Action link<sgds-icon name="arrow-right" size="md"></sgds-icon></a
     ></sgds-link>
   </sgds-system-banner-item>
   <sgds-system-banner-item>
@@ -36,7 +36,7 @@
       congue sapien eu, rhoncus
     </div>
     <sgds-link size="sm" variant="light" slot="action"
-      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+      ><a href="#">Action link<sgds-icon name="arrow-right" size="md"></sgds-icon></a
     ></sgds-link>
   </sgds-system-banner-item>
   <sgds-system-banner-item>
@@ -47,7 +47,7 @@
       congue sapien eu, rhoncus
     </div>
     <sgds-link size="sm" variant="light" slot="action"
-      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+      ><a href="#">Action link<sgds-icon name="arrow-right"  size="md"></sgds-icon></a
     ></sgds-link>
   </sgds-system-banner-item>
   <sgds-system-banner-item>
@@ -58,7 +58,7 @@
       congue sapien eu, rhoncus
     </div>
     <sgds-link size="sm" variant="light" slot="action"
-      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
+      ><a href="#">Action link<sgds-icon name="arrow-right" size="md"></sgds-icon></a
     ></sgds-link>
   </sgds-system-banner-item>
   <sgds-system-banner-item>
@@ -68,9 +68,6 @@
       facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus
     </div>
-    <sgds-link size="sm" variant="light" slot="action"
-      ><a href="#">Action link<sgds-icon name="arrow-right"></sgds-icon></a
-    ></sgds-link>
   </sgds-system-banner-item>
 </sgds-system-banner>
 
