chore(ComboBox): updated the way the click is handled for each option and clean up code

--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -29,10 +29,16 @@
           <sgds-combo-box-option value="3">Option 3</sgds-combo-box-option>
         </sgds-combo-box>
 
-        <sgds-combo-box id="combobox-example" label="Items" clearable multiSelect placeholder="ComboBox">
+        <sgds-combo-box id="combobox-example" label="Items" value="1;3" clearable multiSelect placeholder="ComboBox">
           <sgds-combo-box-option value="1">Option 1</sgds-combo-box-option>
           <sgds-combo-box-option value="2">Option 2</sgds-combo-box-option>
           <sgds-combo-box-option value="3">Option 3</sgds-combo-box-option>
+        </sgds-combo-box>
+
+        <sgds-combo-box id="combobox-example" label="Items" value="option3" multiSelect placeholder="ComboBox">
+          <sgds-combo-box-option value="option1">Apple</sgds-combo-box-option>
+          <sgds-combo-box-option value="option2">Apricot</sgds-combo-box-option>
+          <sgds-combo-box-option value="option3">Durian</sgds-combo-box-option>
         </sgds-combo-box>
       </div>
 
