chore(ComboBox): clean up

--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -36,7 +36,7 @@
         </sgds-combo-box>
 
         <sgds-combo-box id="combobox-example" label="Items" value="option3" multiSelect placeholder="ComboBox">
-          <sgds-combo-box-option value="option1">Apple</sgds-combo-box-option>
+          <sgds-combo-box-option disabled value="option1">Apple</sgds-combo-box-option>
           <sgds-combo-box-option value="option2">Apricot</sgds-combo-box-option>
           <sgds-combo-box-option value="option3">Durian</sgds-combo-box-option>
         </sgds-combo-box>
