feat(SystemBanner): handle when slot action is not filled

--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -22,11 +22,9 @@
     <div>
      1 Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac
       facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
+      congue sapien eu, rhoncus  Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus
     </div>
-    <sgds-link size="sm" variant="light" slot="action"
-      ><a href="#">Action link<sgds-icon name="arrow-right" size="md"></sgds-icon></a
-    ></sgds-link>
   </sgds-system-banner-item>
   <sgds-system-banner-item>
     <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
@@ -35,9 +33,6 @@
       facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus
     </div>
-    <sgds-link size="sm" variant="light" slot="action"
-      ><a href="#">Action link<sgds-icon name="arrow-right" size="md"></sgds-icon></a
-    ></sgds-link>
   </sgds-system-banner-item>
   <sgds-system-banner-item>
     <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
@@ -57,9 +52,6 @@
       facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus
     </div>
-    <sgds-link size="sm" variant="light" slot="action"
-      ><a href="#">Action link<sgds-icon name="arrow-right" size="md"></sgds-icon></a
-    ></sgds-link>
   </sgds-system-banner-item>
   <sgds-system-banner-item>
     <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
