feat(SystemBannerItem): hasActionSlot prop for ssr support

--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -16,7 +16,7 @@
         inset: 0
     }
 </style>
-<sgds-system-banner dismissible show>
+<sgds-system-banner show>
   <sgds-system-banner-item>
     <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
     <div>
@@ -25,6 +25,9 @@
       congue sapien eu, rhoncus  Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida,
       congue sapien eu, rhoncus
     </div>
+     <sgds-link size="sm" variant="light" slot="action"
+      ><a href="#">Action link<sgds-icon name="arrow-right"  size="md"></sgds-icon></a
+    ></sgds-link>
   </sgds-system-banner-item>
   <sgds-system-banner-item>
     <sgds-icon slot="icon" name="placeholder" size="md"></sgds-icon>
