fix(Link): icon size to link size and alignment

--- a/playground/Link.html
+++ b/playground/Link.html
@@ -54,6 +54,21 @@
     <a href="#">Read more<sgds-icon name="placeholder"></sgds-icon></a>
   </sgds-link>
 </div>
+<div>
+  <h3>Sizes with icon</h3>
+  <sgds-link size="xs">
+    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size SM</a>
+  </sgds-link>
+  <sgds-link size="sm">
+    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size SM</a>
+  </sgds-link>
+  <sgds-link size="md">
+    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size SM</a>
+  </sgds-link>
+  <sgds-link size="lg">
+    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size SM</a>
+  </sgds-link>
+</div>
 <br>
 <div>
   <h3>External Link</h3>
