--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -31,7 +31,15 @@
 <sgds-combo-box-option value="1">Afghanistan</sgds-combo-box-option>
 <sgds-combo-box-option value="2">Zimbabwe</sgds-combo-box-option>
 </sgds-combo-box>
-<sgds-combo-box multiselect id="combobox-example" label="Items" value="1;2" placeholder="ComboBox"></sgds-combo-box>
+<sgds-input type="datetime-local"></sgds-input>
+
+<script>
+      const comboBox = document.querySelector("#combobox-example");
+      comboBox.addEventListener("sgds-input", (e) => {
+        console.log(e.detail.displayValue)    
+      })
+
+</script>
     <!-- <script>
       const comboBox = document.querySelector("#combobox-example");
       comboBox.menuList = [
