feat(Link): add motion tokens and applied to underline transition

--- a/playground/Link.html
+++ b/playground/Link.html
@@ -46,6 +46,20 @@
 </div>
 <br>
 <div>
+  <h3>Alternative disabled</h3>
+  <sgds-link disabled>
+    <a href="#" disabled>Read more</a>
+  </sgds-link>
+</div>
+<br>
+<div>
+  <h3>active</h3>
+  <sgds-link active>
+    <a href="#">Read more</a>
+  </sgds-link>
+</div>
+<br>
+<div>
   <h3>With Icon</h3>
   <sgds-link>
     <a href="#"><sgds-icon name="placeholder"></sgds-icon>Read more</a>
@@ -57,22 +71,32 @@
 <div>
   <h3>Sizes with icon</h3>
   <sgds-link size="xs">
-    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size SM</a>
+    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size xsg</a>
   </sgds-link>
   <sgds-link size="sm">
-    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size SM</a>
+    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size smq</a>
   </sgds-link>
   <sgds-link size="md">
-    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size SM</a>
+    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size mdp</a>
   </sgds-link>
   <sgds-link size="lg">
-    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size SM</a>
+    <a href="#"><sgds-icon name="placeholder"></sgds-icon>Size lg</a>
   </sgds-link>
 </div>
 <br>
 <div>
   <h3>External Link</h3>
-  <sgds-link>
-    <a href="#" target="_blank">Read more</a>
+  <sgds-link size="lg">
+    <a href="#" target="_blank">Read more lg</a>
   </sgds-link>
+  <sgds-link>
+    <a href="#" target="_blank">Read more md</a>
+  </sgds-link>
+    <sgds-link size="sm">
+    <a href="#" target="_blank">Read more sm</a>
+      </sgds-link>
+     <sgds-link size="xs">
+    <a href="#" target="_blank">Read more xs</a>
+  </sgds-link>
+ 
 </div>
