feat(Link): new tone prop to replace deprecated variant prop

--- a/playground/Link.html
+++ b/playground/Link.html
@@ -4,7 +4,26 @@
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
 
 <div>
-  <h3>Variants</h3>
+  <h3>Tone</h3>
+  <sgds-link>
+    <a href="#">Read more</a>
+  </sgds-link>
+  <sgds-link tone="danger">
+    <a href="#">Read more</a>
+  </sgds-link>
+  <sgds-link tone="neutral">
+    <a href="#">Read more</a>
+  </sgds-link>
+  <sgds-link tone="fixed-light">
+    <a href="#">Read more</a>
+  </sgds-link>
+  <sgds-link tone="fixed-dark">
+    <a href="#">Read more</a>
+  </sgds-link>
+</div>
+<br>
+<div>
+  <h3>Variants (deprecated)</h3>
   <sgds-link>
     <a href="#">Read more</a>
   </sgds-link>
