--- a/index.html
+++ b/index.html
@@ -2126,62 +2126,62 @@
       </sgds-tooltip>
       <button onclick="tooltip.show()">click me</button>
     </div>
-    <sgds-footer>
-      <h2 slot="title">Name of portal/digital service</h2>
-      <p slot="description">Description of portal/digital service</p>
-      <sgds-footer-item slot="items">
-        <div slot="title">Application Guidelines</div>
-        <a href="/application-guidelines/lorem-ipsum-one/second-level-a/">hello world</a>
-        <a href="/application-guidelines/lorem-ipsum-one/part-A/">Second Level B</a>
-        <a href="/application-guidelines/lorem-ipsum-three/">Lorem Ipsum Three</a>
-      </sgds-footer-item>
-      <sgds-footer-item slot="items">
-        <div slot="title">Legislation</div>
-        <a href="#">Legislation</a>
-        <a href="https://en.wikipedia.org/wiki/Year" target="_blank">External Link One</a>
-        <a href="https://en.wikipedia.org/wiki/Spring_(season)" target="_blank">External Link Two</a>
-      </sgds-footer-item>
-      <sgds-footer-item slot="items">
-        <div slot="title">Resources</div>
-        <a href="/resource_room/">All</a>
-        <a href="/resource_room/forms-and-templates/" target="_blank">Forms and Templates</a>
-        <a href="/resource_room/guides/" target="_blank">Guides</a>
-      </sgds-footer-item>
-      <sgds-footer-item slot="items">
-        <div slot="title">Resources</div>
-        <a href="/resource_room/">All</a>
-        <a href="/resource_room/forms-and-templates/" target="_blank">Forms and Templates</a>
-        <a href="/resource_room/guides/" target="_blank">Guides</a>
-      </sgds-footer-item>
-      <sgds-footer-item slot="items">
-        <div slot="title">Resources</div>
-        <a href="/resource_room/">All</a>
-        <a href="/resource_room/forms-and-templates/" target="_blank">Forms and Templates</a>
-        <a href="/resource_room/guides/" target="_blank">Guides</a>
-      </sgds-footer-item>
-      <sgds-footer-item slot="items">
-        <div slot="title">Resources</div>
-        <a href="/resource_room/">All</a>
-        <a href="/resource_room/forms-and-templates/" target="_blank">Forms and Templates</a>
-        <a href="/resource_room/guides/" target="_blank">Guides</a>
-      </sgds-footer-item>
+     <sgds-footer contacthref="https://form.gov.sg/" feedbackhref="https://form.gov.sg/" faqhref="https://form.gov.sg/" privacyhref="https://www.designsystem.tech.gov.sg/privacy/" termsofusehref="https://www.designsystem.tech.gov.sg/terms-of-use/">
+        <h2 slot="title">Name of portal/digital service</h2>
+        <p slot="description">Description of portal/digital service</p>
+        <sgds-footer-item slot="items">
+          <div slot="title">Application Guidelines</div>
+          <sgds-link><a href="/application-guidelines/lorem-ipsum-one/second-level-a/">hello world</a></sgds-link>
+           <sgds-link><a href="/application-guidelines/lorem-ipsum-one/part-A/">Second Level B</a></sgds-link>
+           <sgds-link><a href="/application-guidelines/lorem-ipsum-three/">Lorem Ipsum Three</a></sgds-link>
+        </sgds-footer-item>
+        <sgds-footer-item slot="items">
+          <div slot="title">Legislation</div>
+          <sgds-link><a href="#">Legislation</a></sgds-link>
+          <sgds-link><a href="https://en.wikipedia.org/wiki/Year" target="_blank">External Link One</a></sgds-link>
+          <sgds-link><a href="https://en.wikipedia.org/wiki/Spring_(season)" target="_blank">External Link Two</a></sgds-link>
+        </sgds-footer-item>
+        <sgds-footer-item slot="items">
+          <div slot="title">Resources</div>
+          <sgds-link><a href="/resource_room/">All</a></sgds-link>
+          <sgds-link><a href="/resource_room/forms-and-templates/" target="_blank">Forms and Templates</a></sgds-link>
+          <sgds-link><a href="/resource_room/guides/" target="_blank">Guides</a></sgds-link>
+        </sgds-footer-item>
+        <sgds-footer-item slot="items">
+          <div slot="title">Resources</div>
+          <sgds-link><a href="/resource_room/">All</a></sgds-link>
+          <sgds-link><a href="/resource_room/forms-and-templates/" target="_blank">Forms and Templates</a></sgds-link>
+          <sgds-link><a href="/resource_room/guides/" target="_blank">Guides</a></sgds-link>
+        </sgds-footer-item>
+        <sgds-footer-item slot="items">
+          <div slot="title">Resources</div>
+          <sgds-link><a href="/resource_room/">All</a></sgds-link>
+          <sgds-link><a href="/resource_room/forms-and-templates/" target="_blank">Forms and Templates</a></sgds-link>
+          <sgds-link><a href="/resource_room/guides/" target="_blank">Guides</a></sgds-link>
+        </sgds-footer-item>
+        <sgds-footer-item slot="items">
+          <div slot="title">Resources</div>
+          <sgds-link><a href="/resource_room/">All</a></sgds-link>
+          <sgds-link><a href="/resource_room/forms-and-templates/" target="_blank">Forms and Templates</a></sgds-link>
+          <sgds-link><a href="/resource_room/guides/" target="_blank">Guides</a></sgds-link>
+        </sgds-footer-item>
 
-      <a slot="social-media" href="https://www.facebook.com">
-        <sgds-icon name="facebook"></sgds-icon>
-      </a>
-      <a slot="social-media" href="https://www.instagram.com">
-        <sgds-icon name="instagram"></sgds-icon>
-      </a>
-      <a slot="social-media" href="https://www.linkedin.com">
-        <sgds-icon name="linkedin"></sgds-icon>
-      </a>
-      <a slot="social-media" href="https://www.x.com">
-        <sgds-icon name="twitter-x"></sgds-icon>
-      </a>
-      <a slot="social-media" href="https://www.youtube.com">
-        <sgds-icon name="youtube"></sgds-icon>
-      </a>
-    </sgds-footer>
+        <a slot="social-media" href="https://www.facebook.com">
+          <sgds-icon name="facebook"></sgds-icon>
+        </a>
+        <a slot="social-media" href="https://www.instagram.com">
+          <sgds-icon name="instagram"></sgds-icon>
+        </a>
+        <a slot="social-media" href="https://www.linkedin.com">
+          <sgds-icon name="linkedin"></sgds-icon>
+        </a>
+        <a slot="social-media" href="https://www.x.com">
+          <sgds-icon name="twitter-x"></sgds-icon>
+        </a>
+        <a slot="social-media" href="https://www.youtube.com">
+          <sgds-icon name="youtube"></sgds-icon>
+        </a>
+      </sgds-footer>
   </body>
 
     <script>
