fix(SystemBannerItem): style font size, color and line height of all text and inline links

--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -148,9 +148,12 @@
 <h3> short message only</h3>
 <sgds-system-banner show>
   <sgds-system-banner-item>
-    <div>
-     1 Etiam suscipit nisi eget porta cursus.
-    </div>
+  <strong>SGDS version 3 is now available</strong>We are updating this
+        portal. In the meantime, please visit our <a
+                href="https://form.gov.sg/65af86f24c2f3e0012e8242b"
+                rel="noopener noreferrer"
+                >storybook</a
+            > for the latest updates.
   </sgds-system-banner-item>
 </sgds-system-banner>
 <br/>
