fix(anchor): anchor external link icon size to be equal to font size and align top

--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -152,8 +152,13 @@
         portal. In the meantime, please visit our <a
                 href="https://form.gov.sg/65af86f24c2f3e0012e8242b"
                 rel="noopener noreferrer"
+                target="_blank"
                 >storybook</a
-            > for the latest updates.
+            > for the latest updates.r<a
+                href="https://form.gov.sg/65af86f24c2f3e0012e8242b"
+                rel="noopener noreferrer"
+                target="_blank"
+                >storybook</a>
   </sgds-system-banner-item>
 </sgds-system-banner>
 <br/>
