fix(Combobox): constraint validation when clicking on menu behaviour

--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -73,7 +73,7 @@
         </form>
 
          <form>
-        <sgds-combo-box value="1;2" multiSelect clearable required hasFeedback>
+        <sgds-combo-box multiSelect clearable required hasFeedback>
           <sgds-combo-box-option value="1">Afghanistan</sgds-combo-box-option>
           <sgds-combo-box-option value="2">Zimbabwe</sgds-combo-box-option>
           <sgds-combo-box-option value="3">Zoo</sgds-combo-box-option>
