--- a/playground/Select.html
+++ b/playground/Select.html
@@ -39,8 +39,9 @@
   >  <sgds-select-option  value="1">Option 1</sgds-select-option>
   <sgds-select-option  value="2">Option 2</sgds-select-option>
   <sgds-select-option value="3">Option 3</sgds-select-option></sgds-select>
-
- 
+<button type="submit">Sub</button>
+<button type="reset">reset</button>
+ </form>
 
   <!-- <sgds-select
     label="Using slots with some disabled options"
