docs(SearchInput): stories wip

--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -47,6 +47,11 @@
           <sgds-combo-box-option value="option2">Apricot</sgds-combo-box-option>
           <sgds-combo-box-option value="option3">Durian</sgds-combo-box-option>
         </sgds-combo-box>
+        <sgds-combo-box id="combobox-loading" label="Readonly and Clearable" readonly clearable value="option3" multiSelect placeholder="ComboBox">
+          <sgds-combo-box-option disabled value="option1">Apple</sgds-combo-box-option>
+          <sgds-combo-box-option value="option2">Apricot</sgds-combo-box-option>
+          <sgds-combo-box-option value="option3">Durian</sgds-combo-box-option>
+        </sgds-combo-box>
       </div>
 
       <div class="small-container">
