--- a/playground/SearchInput.html
+++ b/playground/SearchInput.html
@@ -35,13 +35,25 @@
           <sgds-search-input-option value="3">Chayote</sgds-search-input-option>
     </sgds-search-input>
     <h4>clearable single select, with menu options</h4>
-    <sgds-search-input clearable value="1" placeholder="type something..">
+    <sgds-search-input  value="1" placeholder="type something..">
           <sgds-search-input-option value="1">Apple</sgds-search-input-option>
           <sgds-search-input-option value="2">Bananna</sgds-search-input-option>
           <sgds-search-input-option value="3">Chayote</sgds-search-input-option>
     </sgds-search-input>
     <h4>multi select, with menu options</h4>
-    <sgds-search-input clearable value="1" placeholder="type something.." multiSelect>
+    <sgds-search-input  value="1" placeholder="type something.." multiSelect>
+          <sgds-search-input-option value="1">Apple</sgds-search-input-option>
+          <sgds-search-input-option value="2">Bananna</sgds-search-input-option>
+          <sgds-search-input-option value="3">Chayote</sgds-search-input-option>
+    </sgds-search-input>
+    <h4>readonly prevents menu from opening </h4>
+    <sgds-search-input value="1" placeholder="type something.." readonly>
+          <sgds-search-input-option value="1">Apple</sgds-search-input-option>
+          <sgds-search-input-option value="2">Bananna</sgds-search-input-option>
+          <sgds-search-input-option value="3">Chayote</sgds-search-input-option>
+    </sgds-search-input>
+    <h4>readonly prevents menu from opening even in loading state  </h4>
+    <sgds-search-input value="1" placeholder="type something.." readonly loading>
           <sgds-search-input-option value="1">Apple</sgds-search-input-option>
           <sgds-search-input-option value="2">Bananna</sgds-search-input-option>
           <sgds-search-input-option value="3">Chayote</sgds-search-input-option>
