--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -113,6 +113,12 @@
       <sgds-combo-box-option value="option2">Apricot</sgds-combo-box-option>
       <sgds-combo-box-option value="option3">Durian</sgds-combo-box-option>
     </sgds-combo-box>
+    <sgds-combo-box id="combobox-loading" label="Disabled and Clearable" disabled clearable value="option3" multiSelect
+      placeholder="ComboBox">
+      <sgds-combo-box-option disabled value="option1">Apple</sgds-combo-box-option>
+      <sgds-combo-box-option value="option2">Apricot</sgds-combo-box-option>
+      <sgds-combo-box-option value="option3">Durian</sgds-combo-box-option>
+    </sgds-combo-box>
   </div>
 
   <div class="small-container">
