--- a/playground/Datepicker.html
+++ b/playground/Datepicker.html
@@ -7,7 +7,7 @@
 <form>
   <sgds-datepicker noFlip hasFeedback value="18/07/2025"></sgds-datepicker>
   <sgds-datepicker noFlip required value="07/08/2024 - 09/08/2024" mode="range"></sgds-datepicker>
-
+<sgds-datepicker menuIsOpen value='01/01/1900'></sgds-datepicker>
   <sgds-button type="submit">Submit</sgds-button>
   <sgds-button type="reset">Reset</sgds-button>
 </form>
